--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
     font-family: 'Inter', sans-serif;
     background: var(--Verydarkblue);
     min-height: 100vh;
+    display: grid;
+    place-items: center;
+
 }
 
 .colorCard {
